dev/tests/cases/pos/helpers32.tv
df helper_add(a: i64, b: i64) -> i64 { return a + b; }
df helper_name() -> str { return "helper"; }
