dev/tests/cases/neg/03_wrong_argc.tv
df add(a: i64, b: i64) -> i64 { return a + b; }
df main() -> void {
    echo!(add(1));
}
